--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h1>
-        Welcome to our store 
+        Welcome to our bootcamp!
     </h1>
     <img src='https://cdn-images-1.medium.com/max/1200/1*sAA3fhIkBhODDYEKe37LGA.png' />
 
