Test GKE Deploy and Selenium workflow

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -6,7 +6,7 @@
 
         Welcome to our bootcamp!
     </h1>
-    <h2>Eddited content</h2>
+    <h2>Hello Pentester Academy!!!</h2>
     <img src='https://cdn-images-1.medium.com/max/1200/1*sAA3fhIkBhODDYEKe37LGA.png' />
 
     <div class="columns">
